# ImageTrust1

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CISIS_REVIEW_GUIDE.md  CONTRIBUTING.md  ImageTrust.spec  LICENSE  Makefile  README.md  dissertation_contents.tex  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
Pungila Materie/: cap1.tex  cap2.tex  cap3.tex  cap4.tex  cap5.tex  cap6.tex  cap7.tex  main.tex  myBib.bib
Pungila Materie/extracted/template-eng/: cap1.tex  cap2.tex  main_file_template_bachelor_masters_english.tex  myBib.bib
assets/: README.md
configs/: baselines.yaml  calibrated_thresholds.json  default.yaml  hyperparameters.yaml  rtx5080_convnext.json  rtx5080_efficientnet.json  rtx5080_resnet50.json
dissertation/__MACOSX/template-eng/: ._main_file_template_bachelor_masters_english.tex
dissertation/template-eng/: cap1.tex  cap2.tex  main_file_template_bachelor_masters_english.tex  myBib.bib
docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml
docs/: ACADEMIC_EVALUATION.md  API.md  ARCHITECTURE_WALKTHROUGH.md  BUILD_WINDOWS_EXE.md  CALIBRATION_SYSTEM.md  DEPLOYMENT.md  DESKTOP_APP_TESTING.md  MASTER_PLAN_ACADEMIC.md  PROJECT_DIAGRAMS.md  STEGANOGRAPHY_DETECTION.md  THESIS_APPENDIX.md  THESIS_DEFENSE_OVERVIEW.md  THRESHOLD_CALIBRATION.md  TROUBLESHOOTING.md  architecture.md  diagrams_viewer.html  performance_comparison.md  threat_model.md  user_study_protocol.md
examples/: 01_basic_detection.py  02_batch_processing.py  03_baseline_comparison.py  04_calibration_demo.py  README.md  __init__.py
models/ojha_et_al/: fc_weights.pth
models/phase2/: checkpoint.json  conformal_all.json  hyperparameters.json  phase2_summary.json  significance_tests.json  split_info.json  temperature_scaling.json  variant_evaluation.json
models/phase2/ablation/: ablation_results.json
models/phase2/cross_generator/: cross_generator_results.json  heatmap_data.json  table_cross_generator.tex
models/phase2/latex_tables/: table_ablation.tex  table_calibration.tex  table_main_comparison.tex  table_variant_analysis.tex
models/phase2/mlp/: full_results.json  reliability_diagram.json  reliability_diagram_calibrated.json  test_predictions.npz  test_predictions_calibrated.npz  training_history.json  val_predictions.npz
models/phase2/xgboost/: feature_importance.json  full_results.json  reliability_diagram.json  reliability_diagram_calibrated.json  test_predictions.npz  test_predictions_calibrated.npz  training_history.json  val_predictions.npz
models/phase2/xgboost_backup/: feature_importance.json  full_results.json  reliability_diagram.json  reliability_diagram_calibrated.json  test_predictions.npz  test_predictions_calibrated.npz  training_history.json  val_predictions.npz
scripts/: RUN_ALL.bat  build_desktop.py  build_exe.cmd  build_exe.ps1  calibrate_cnn_thresholds.py  calibrate_thresholds.py  calibrate_thresholds_advanced.py  create_splits.py  download_models.py  evaluate_and_optimize.py  evaluate_calibration.py  evaluate_novel_contributions.py  evaluate_ojha_baseline.py  evaluate_uncertainty.py  evaluate_wang_baseline.py  evaluation_protocol.py  fix_shard_labels.py  generate_calibration_plots.py  generate_example_images.py  generate_figures.py  generate_figures_from_results.py  generate_paper_tables.py  generate_presentation.py  generate_screenshot_dataset.py  generate_social_media_dataset.py  generate_synthetic_robustness_data.py  generate_tables.py  generate_train_test_roc.py  generate_training_curves.py  optimize_thresholds.py  organize_local_data.py  prepare_dataset.py  quick_demo.py  regenerate_paper_figures.py  reproduce_all.py  run_ablation.py  run_academic_evaluation.py  run_baselines.py  run_evaluation.py  run_full_evaluation.py  (+4 more)
scripts/orchestrator/: __init__.py  launch_phase1_linux.sh  launch_phase1_windows.bat  launch_phase1_windows.ps1  run_cross_generator_eval.py  run_embedding_extraction.py  run_phase1_pipeline.py  run_phase2_training.py  run_phase3_publication.py  run_synthetic_generation.py
src/imagetrust/: __init__.py  __main__.py  cli.py  desktop_app.py
src/imagetrust/api/: __init__.py  main.py  routes.py  schemas.py
src/imagetrust/baselines/: __init__.py  base.py  calibration.py  classical_baseline.py  cnn_baseline.py  feature_extraction.py  imagetrust_wrapper.py  registry.py  trainer.py  uncertainty.py  vit_baseline.py
src/imagetrust/core/: __init__.py  config.py  exceptions.py  types.py
src/imagetrust/desktop/: __init__.py  app.py
src/imagetrust/detection/: __init__.py  augmentation.py  calibration.py  conformal.py  detector.py  (+10 more)
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py  test_detection_pipeline.py  test_robustness_pipeline.py
tests/unit/: __init__.py  test_augmentation.py  test_conformal.py  test_detection.py  test_forensics.py  test_metadata.py  test_statistical.py
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+84 files in other folders)
